# simple_sdl_2d_engine

./: CMakeLists.txt  Makefile  build.sh  main.cpp  todolist.txt
behaviors/: eight_directions.h
engine/: scene.h  sprite.cpp  sprite.h  types.h
src/: main.cpp
src/behaviors/: eight_directions.cpp
src/engine/: game.cpp  game.h  scene.cpp  sprite.cpp  sprite.h
src/map/: map_loader.cpp  map_loader.h
